Closed Bug 715810 Opened 13 years ago Closed 13 years ago

Bug 679476 causes crash in [@ mime_parse_stream_complete]

Categories

(MailNews Core :: MIME, defect)

x86
Windows NT
defect
Not set
critical

Tracking

(thunderbird9 affected, thunderbird10+ fixed, thunderbird11 fixed)

RESOLVED FIXED
Thunderbird 12.0
Tracking Status
thunderbird9 --- affected
thunderbird10 + fixed
thunderbird11 --- fixed

People

(Reporter: m_kato, Assigned: Bienvenu)

References

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

mdd->messageBody is null This bug was filed from the Socorro interface and is report bp-56635412-cbe7-436d-be2c-73e532120103 . ============================================================= 0 xul.dll mime_parse_stream_complete mailnews/mime/src/mimedrft.cpp:1610 1 xul.dll nsStreamConverter::OnStopRequest mailnews/mime/src/nsStreamConverter.cpp:1090 2 xul.dll nsStreamListenerTee::OnStopRequest netwerk/base/src/nsStreamListenerTee.cpp:71 3 xul.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102 4 xul.dll nsProxyObjectCallInfo::Run xpcom/proxy/src/nsProxyEvent.cpp:182 5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:631 6 xul.dll NS_ProcessNextEvent_P objdir-tb/mozilla/xpcom/build/nsThreadUtils.cpp:245 7 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:134 8 xul.dll MessageLoop::RunInternal ipc/chromium/src/base/message_loop.cc:208 9 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:201 10 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:175 11 xul.dll nsBaseAppShell::Run widget/src/xpwidgets/nsBaseAppShell.cpp:189 12 xul.dll nsAppShell::Run widget/src/windows/nsAppShell.cpp:261 13 xul.dll nsAppStartup::Run toolkit/components/startup/nsAppStartup.cpp:228 14 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:3557 15 thunderbird.exe do_main mail/app/nsMailApp.cpp:143 16 thunderbird.exe NS_internal_main mail/app/nsMailApp.cpp:226 17 thunderbird.exe wmain toolkit/xre/nsWindowsWMain.cpp:107 18 thunderbird.exe __tmainCRTStartup crtexe.c:594 19 kernel32.dll BaseProcessStart
Component: Migration → MIME
Product: Thunderbird → MailNews Core
QA Contact: migration → mime
same as bug 564701?
(In reply to Wayne Mery (:wsmwk) from comment #1) > same as bug 564701? No. When filing bug 564701, bug 679476 isn't landed.
This crash appears from 9.0 and top 3 crash into 9.0.1 now.
Do we have any idea what can cause this?
(In reply to Mark Banner (:standard8) from comment #4) > Do we have any idea what can cause this? or rather, trigger it.
(In reply to Makoto Kato from comment #2) > (In reply to Wayne Mery (:wsmwk) from comment #1) > > same as bug 564701? > > No. When filing bug 564701, bug 679476 isn't landed. then I understand you to say this is a regression from bug 679476
Keywords: regression
Any ideas about steps to reproduce the issue? We can bullet-proof it, of course, but we won't know if there are issues downstream.
Attached patch bulletproof fixSplinter Review
since this is a top crash, we should protect against it.
Assignee: nobody → dbienvenu
Status: NEW → ASSIGNED
Attachment #587353 - Flags: review?(mbanner)
(In reply to David :Bienvenu from comment #7) > Any ideas about steps to reproduce the issue? We can bullet-proof it, of > course, but we won't know if there are issues downstream. I don't know. I think that it depends on mail header and body.
Comment on attachment 587353 [details] [diff] [review] bulletproof fix r=me, lets get this in on branches as well.
Attachment #587353 - Flags: review?(mbanner)
Attachment #587353 - Flags: review+
Attachment #587353 - Flags: approval-comm-beta+
Attachment #587353 - Flags: approval-comm-aurora+
fixed on trunk - http://hg.mozilla.org/comm-central/rev/6c76c5640293 - if standard8 doesn't beat me to it, I'll try to transplant this to the branches later when I'm on my mac.
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 12.0
Keywords: topcrash
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: