bulletproof fix for crash in mime_parse_stream_complete, r=standard8, bug 715810